# pandotfiles

./: .gitmodules  Dockerfile  MANIFEST.in  README.md  setup.cfg  tlmgr_install.sh
.github/workflows/: build_docker.yml
data/defaults/: auto_tikz_default-pandotfiles.yaml  codev_remote_default-pandotfiles.yaml  environment.yaml  latex_default-pandotfiles.yaml  latex_default_osa-article-pandotfiles.yaml  latex_default_ulthese-pandotfiles.yaml  latexmkrc  mermaid.css
data/filters/: abstract-to-meta.lua  get-todo.lua  greppattern.lua  remove-todo.lua  siunitx.lua
data/gitignore/: project.gitignore
data/injection/: genlatextemplate_script.py  latex_custom_injection.tex  latex_custom_injection_osa-article.tex
data/makefile_template/: auto_tikz_makefile  codev_makefile  pdf_makefile  python_makefile
data/templates/actions/: github-actions-pdf.yml
data/templates/docstyle-latex/: docstyle-lrio-min.tex  docstyle-lrio.tex  docstyle-ulthese.tex
data/templates/docstyle-latex/bst/: frplain.bst
data/templates/docstyle_latex/: docstyle-lrio-min.tex  docstyle-lrio.tex  docstyle-self.tex  docstyle-ulthese.tex  docstyle-zettel.tex
data/templates/document_templates/: diary.md
data/templates/makefiles/: auto_tikz_makefile  codev_makefile  julia_makefile  pdf_makefile  python_makefile
examples/spie/: crossref.yaml  main.md  metadata.yaml
examples/spieman/: main.md  metadata.yaml
pandotfiles/: autotikz.py  genlatextemplate.py  genpdfmakefile.py  genrevealjstemplate.py  gentikzmakefile.py  pandot.py
pandotfiles/util/: makefile_mod.py  parser.py
src/pandotfiles/: autotikz.py  extracttodo.py  genlatextemplate.py  genpdfmakefile.py  genrevealjstemplate.py  gentikzmakefile.py  pandot.py  pandotcli.py  panotescli.py  todomd2org.py
src/pandotfiles/data/defaults/: codev_remote_build_default-pandotfiles.yaml  codev_remote_default-pandotfiles.yaml  latex_default-pandotfiles.yaml  latex_default_optica-article-pandotfiles.yaml  latex_default_opticameet-pandotfiles.yaml  latex_default_spie-pandotfiles.yaml  latex_default_spieman-pandotfiles.yaml  latex_default_ulthese-pandotfiles.yaml  latexmkrc  metadata_default-pandotfiles.yaml  pdf_default-pandotfiles.yaml
src/pandotfiles/data/filters/: abstract-to-meta.lua  resume-to-meta.lua  ulabstract-to-meta.lua  ulresume-to-meta.lua
src/pandotfiles/data/injection/: genlatextemplate_script.py  latex_custom_injection.tex  latex_custom_injection_optica-article.tex  latex_custom_injection_osa-article.tex  latex_custom_injection_spie.tex  latex_custom_injection_spieman.tex  nord_gen.py
src/pandotfiles/data/injection/log/: latex_custom_injection_spie.fdb_latexmk  latex_custom_injection_spie.fls
src/pandotfiles/data/templates/actions/: github-actions-pdf.yml
src/pandotfiles/data/templates/docstyle_latex/: docstyle-diary.tex  docstyle-ga-min.tex  docstyle-ga.tex  docstyle-lrio-min.tex  docstyle-lrio.tex  docstyle-optica-article.tex  docstyle-opticameet.tex  docstyle-ulthese.tex
src/pandotfiles/data/templates/makefiles/: auto_tikz_makefile  codev_build_makefile  codev_makefile  pdf_makefile  python_makefile
src/pandotfiles/panotes/: file_management.py  tagsmd.py  todomd.py
src/pandotfiles/util/: filenames.py  makefile_mod.py  markdown.py  parser.py
