[metadata]
name = pandotfiles
author= Guillaume Allain
version = 0.0.1

[options]
python_requires = >=3.9
install_requires =
    ruamel_yaml
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    auto_tikz=pandotfiles.autotikz:main
    gen_latex_template=pandotfiles.genlatextemplate:main
    gen_revealjs_template=pandotfiles.genrevealtemplate:main
    gen_makefile_auto_tikz=pandotfiles.gentikzmakefile:main
    gen_makefile_pdf=pandotfiles.genpdfmakefile:main
    pandot=pandotfiles.pandotcli:main
    todomd2org=pandotfiles.todomd2org:main
    pandotlint=pandotfiles.util.markdown:clean_markdown
    panotes=pandotfiles.panotescli:main

# [options.data_files]
[options.package_data]
data/templates/makefiles/=
    src/pandotfiles/data/templates/makefiles/auto_tikz_makefile
    src/pandotfiles/data/templates/makefiles/pdf_makefile
    src/pandotfiles/data/templates/makefiles/python_makefile
    src/pandotfiles/data/templates/makefiles/julia_makefile
    src/pandotfiles/data/templates/makefiles/codev_makefile
    src/pandotfiles/data/templates/makefiles/codev_build_makefile
data/filters/=
    src/pandotfiles/data/filters/remove-todo.lua
    src/pandotfiles/data/filters/siunitx.lua
    src/pandotfiles/data/filters/ulabstract-to-meta.lua
    src/pandotfiles/data/filters/resume-to-meta.lua
    src/pandotfiles/data/filters/get-todo.lua
    src/pandotfiles/data/filters/greppattern.lua
    src/pandotfiles/data/filters/math_spaces.lua
    src/pandotfiles/data/filters/abstract-to-meta.lua
    src/pandotfiles/data/filters/lua-filters/include-files/include-files.lua
    src/pandotfiles/data/filters/pandoc-gls/pandoc-gls.lua
data/defaults/=
    src/pandotfiles/data/defaults/latex_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/revealjs_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/pandoc-crossref-pandotfiles.yaml
    src/pandotfiles/data/defaults/auto_tikz_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/pdf_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/metadata_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/codev_remote_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/codev_remote_build_default-pandotfiles.yaml
    src/pandotfiles/data/defaults/latexmkrc
    src/pandotfiles/data/defaults/latex_default_ulthese-pandotfiles.yaml
    src/pandotfiles/data/defaults/latex_default_osa-article-pandotfiles.yaml
    src/pandotfiles/data/defaults/latex_default_opticameet-pandotfiles.yaml
    src/pandotfiles/data/defaults/latex_default_spie-article-pandotfiles.yaml
    src/pandotfiles/data/defaults/latex_default_spieman-article-pandotfiles.yaml
    src/pandotfiles/data/defaults/environment.yaml
data/injection/=
    src/pandotfiles/data/injection/latex_custom_injection.tex
    src/pandotfiles/data/injection/genlatextemplate_script.py
    src/pandotfiles/data/injection/latex_custom_injection_osa-article.tex
    src/pandotfiles/data/injection/latex_custom_injection_spie.tex
    src/pandotfiles/data/injection/latex_custom_injection_spieman.tex
data/templates/docstyle_latex=
    src/pandotfiles/data/templates/docstyle_latex/docstyle-lrio.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-lrio-min.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-ga.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-ga-min.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-zettel.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-diary.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-opticameet.tex
    src/pandotfiles/data/templates/docstyle_latex/docstyle-ulthese.tex
data/templates/docstyle_latex/img=
    src/pandotfiles/data/templates/docstyle_latex/img/logo_lrio.pdf
    src/pandotfiles/data/templates/docstyle_latex/img/logo_ga.png
data/templates/latex_classes/pandot_img/=
    src/pandotfiles/data/templates/latex_classes/pandot_img/*
data/templates/latex_classes/spie/=
    src/pandotfiles/data/templates/latex_classes/spie/*
data/templates/latex_classes/spieman/=
    src/pandotfiles/data/templates/latex_classes/spieman/*
data/templates/latex_classes/osa-article/=
    src/pandotfiles/data/templates/latex_classes/osa-article/jabbrv-ltwa-all.ldf
    src/pandotfiles/data/templates/latex_classes/osa-article/jabbrv-ltwa-en.ldf
    src/pandotfiles/data/templates/latex_classes/osa-article/jabbrv.sty
    src/pandotfiles/data/templates/latex_classes/osa-article/osa-article.cls
    src/pandotfiles/data/templates/latex_classes/osa-article/osajnl.bst
data/templates/latex_classes/osa-article/styles=
    src/pandotfiles/data/templates/latex_classes/osa-article/styles/*
data/templates/latex_classes/opticameet/styles=
    src/pandotfiles/data/templates/latex_classes/opticameet/styles/*
data/templates/documents=
    src/pandotfiles/data/templates/documents/diary.md
data/templates/actions=
    src/pandotfiles/data/templates/actions/github-actions-pdf.yml
data/gitignore/=
    src/pandotfiles/data/gitignore/python.gitignore
    src/pandotfiles/data/gitignore/julia.gitignore
    src/pandotfiles/data/gitignore/project.gitignore
    src/pandotfiles/data/gitignore/doc.gitignore
    src/pandotfiles/data/gitignore/codev.gitignore
    src/pandotfiles/data/gitignore/tikz.gitignore
