[metadata]
name = pandotfiles
author= Guillaume Allain
version = 0.0.2

[options]
python_requires = >=3.9
install_requires =
    ruamel_yaml
package_dir=
    =src
packages=find:
include_package_data = true

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    auto_tikz=pandotfiles.autotikz:main
    gen_latex_template=pandotfiles.genlatextemplate:main
    gen_revealjs_template=pandotfiles.genrevealtemplate:main
    gen_makefile_auto_tikz=pandotfiles.gentikzmakefile:main
    gen_makefile_pdf=pandotfiles.genpdfmakefile:main
    pandot=pandotfiles.pandotcli:main
    todomd2org=pandotfiles.todomd2org:main
    pandotlint=pandotfiles.util.markdown:clean_markdown
    panotes=pandotfiles.panotescli:main

[options.package_data]
data/=
    src/pandotfiles/data/*
